--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <h1>Hello, world!</h1>
 <!-- Para gerar a importação do componente criado: -->
 <app-first-component></app-first-component>
-<app-parent name="username"></app-parent>
+<app-parent name="tiago"></app-parent>
