trabalhando com diretiva condicional

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,4 @@
 <!-- Para gerar a importação do componente criado: -->
 <app-first-component></app-first-component>
 <app-parent name="tiago"></app-parent>
+<app-directives></app-directives>
