trabalhando com emissao de eventos

--- a/src/app/components/events/events.component.html
+++ b/src/app/components/events/events.component.html
@@ -1,1 +1,9 @@
-<p>events works!</p>
+<div>
+  <div>
+    <p *ngIf="show; else notFound">Apareci!</p>
+    <ng-template #notFound>
+      <p>Sumi!</p>
+    </ng-template>
+  </div>
+  <button (click)="showMessage()">Clique Aqui</button>
+</div>
