--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,4 @@
 <app-first-component></app-first-component>
 <app-parent name="tiago"></app-parent>
 <app-directives></app-directives>
+<app-events></app-events>
