trabalhando com interfaces

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,3 +4,4 @@
 <app-parent name="tiago"></app-parent>
 <app-directives></app-directives>
 <app-events></app-events>
+<app-emitindo-eventos></app-emitindo-eventos>
